Split LocalSettings.php to separate files in the data/settings.d folder

--- a/docker/mediawiki/php.ini
+++ b/docker/mediawiki/php.ini
@@ -1,3 +1,6 @@
 ; Override default PHP settings to allow for uploads larger than 2M
 upload_max_filesize = 200M
 post_max_size = 210M
+
+; log the errors to stderr
+error_log = /proc/self/fd/2
