--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,5 @@ services:
     links:
       - mysql
     volumes:
-      - .data/images:/var/www/html/w/images
-      - .data/settings.d:/var/www/html/w/settings.d
+      - ./data/images:/var/www/html/w/images
+      - ./data/settings.d:/var/www/html/w/settings.d
