--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,9 @@
 [submodule "mediawiki/skins/Vector"]
 	path = mediawiki/skins/Vector
 	url = https://gerrit.wikimedia.org/r/p/mediawiki/skins/Vector.git
+[submodule "mediawiki/parsoid"]
+	path = mediawiki/parsoid
+	url = https://gerrit.wikimedia.org/r/p/mediawiki/services/parsoid
+[submodule "mediawiki/extensions/VisualEditor"]
+	path = mediawiki/extensions/VisualEditor
+	url = https://gerrit.wikimedia.org/r/p/mediawiki/extensions/VisualEditor.git
