--- a/.gitmodules
+++ b/.gitmodules
@@ -44,3 +44,6 @@
 [submodule "mediawiki/extensions/ReplaceText"]
 	path = mediawiki/extensions/ReplaceText
 	url = https://gerrit.wikimedia.org/r/p/mediawiki/extensions/ReplaceText.git
+[submodule "mediawiki/extensions/Editcount"]
+	path = mediawiki/extensions/Editcount
+	url = https://gerrit.wikimedia.org/r/p/mediawiki/extensions/Editcount.git
