Add email/logo/favicon setup, fix skin to branch REL1_26

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,5 +28,11 @@ services:
       WG_SERVER: http://192.168.99.100
       WG_SECRET_KEY: ee0efe6c8b4bc1ee5ccd906ad783aeb20115f061a3f9d85e6850612104920701
       WG_UPGRADE_KEY: 08882e35d74f30cf
+      WG_LOGO:
+      WG_SMTP_HOST:
+      WG_SMTP_IDHOST:
+      WG_SMTP_PORT:
+      WG_SMTP_USERNAME:
+      WG_SMTP_PASSWORD:
     volumes:
       - ./data/images:/var/www/html/w/images
