--- a/docker/mediawiki/Dockerfile
+++ b/docker/mediawiki/Dockerfile
@@ -33,6 +33,7 @@ COPY mediawiki/extensions /var/www/html/w/extensions
 
 # Some extensions require additional setup
 RUN cd /var/www/html/w/extensions/SyntaxHighlight_GeSHi && composer install --no-dev
+RUN chown -R www-data:www-data /var/www/html/w/extensions/Widgets/compiled_templates
 
 COPY mediawiki/skins /var/www/html/w/skins
 
