--- a/.gitmodules
+++ b/.gitmodules
@@ -56,3 +56,9 @@
 [submodule "mediawiki/extensions/Elastica"]
 	path = mediawiki/extensions/Elastica
 	url = https://gerrit.wikimedia.org/r/p/mediawiki/extensions/Elastica.git
+[submodule "mediawiki/extensions/Cargo"]
+	path = mediawiki/extensions/Cargo
+	url = https://gerrit.wikimedia.org/r/p/mediawiki/extensions/Cargo.git
+[submodule "mediawiki/extensions/SemanticForms"]
+	path = mediawiki/extensions/SemanticForms
+	url = https://gerrit.wikimedia.org/r/p/mediawiki/extensions/SemanticForms.git
