--- a/.gitmodules
+++ b/.gitmodules
@@ -68,3 +68,6 @@
 [submodule "mediawiki/extensions/ExternalData"]
 	path = mediawiki/extensions/ExternalData
 	url = https://gerrit.wikimedia.org/r/p/mediawiki/extensions/ExternalData.git
+[submodule "mediawiki/extensions/Gadgets"]
+	path = mediawiki/extensions/Gadgets
+	url = https://gerrit.wikimedia.org/r/p/mediawiki/extensions/Gadgets.git
