--- a/.gitmodules
+++ b/.gitmodules
@@ -77,3 +77,6 @@
 [submodule "mediawiki/extensions/UploadWizard"]
 	path = mediawiki/extensions/UploadWizard
 	url = https://gerrit.wikimedia.org/r/p/mediawiki/extensions/UploadWizard.git
+[submodule "mediawiki/extensions/CodeEditor"]
+	path = mediawiki/extensions/CodeEditor
+	url = https://gerrit.wikimedia.org/r/p/mediawiki/extensions/CodeEditor.git
