--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
       context: .
       dockerfile: docker/elasticsearch/Dockerfile
     image: cllu/mediawiki-elasticsearch:1.7.5-1
+    networks:
+      mediawiki-internal:
+        ipv4_address: 172.27.1.10
   mysql:
     image: mysql:5.7.12
     environment:
@@ -12,11 +15,30 @@ services:
       - MYSQL_DATABASE=mediawiki
     volumes:
       - ./data/dump:/docker-entrypoint-initdb.d
+    networks:
+      mediawiki-internal:
+        ipv4_address: 172.27.1.11
   parsoid:
     build:
       context: .
       dockerfile: docker/parsoid/Dockerfile
     image: cllu/mediawiki-parsoid:1.26-1
+    networks:
+      mediawiki-internal:
+        ipv4_address: 172.27.1.3
+  redis:
+    image: redis:2.8.23
+    networks:
+      - ocg-internal
+  ocg:
+    build:
+      context: .
+      dockerfile: docker/ocg/Dockerfile
+    image: cllu/mediawiki-ocg:1.26-1
+    networks:
+      ocg-internal:
+      mediawiki-internal:
+        ipv4_address: 172.27.1.4
   mediawiki:
     build:
       context: .
@@ -24,10 +46,6 @@ services:
     image: cllu/mediawiki:1.26-13
     ports:
       - 80:80
-    links:
-      - elasticsearch
-      - mysql
-      - parsoid
     environment:
       WG_SITENAME: MediaWiki
       WG_DBNAME: mediawiki
@@ -42,3 +60,17 @@ services:
       WG_SMTP_PASSWORD:
     volumes:
       - ./data/images:/var/www/html/w/images
+    networks:
+      mediawiki-internal:
+        ipv4_address: 172.27.1.2
+
+networks:
+  mediawiki-internal:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+      - subnet: 172.27.1.0/24
+        gateway: 172.27.1.1
+  ocg-internal:
+    driver: bridge
