Add Scribunto extension

--- a/docker/mediawiki/Dockerfile
+++ b/docker/mediawiki/Dockerfile
@@ -13,7 +13,7 @@ RUN set -x; \
         python \
         ghostscript poppler-utils \
     && ln -fs /usr/lib/x86_64-linux-gnu/libzip.so /usr/lib/ \
-    && docker-php-ext-install intl mysqli zip mbstring opcache fileinfo \
+    && docker-php-ext-install intl mysqli zip mbstring opcache fileinfo pcntl \
     && pear install net_smtp \
     && pear install mail \
     && pecl install apcu-4.0.11 && echo extension=apcu.so > /usr/local/etc/php/conf.d/apcu.ini \
