--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: docker/elasticsearch/Dockerfile
-    image: cllu/mediawiki-elasticsearch:1.7.5-1
+    image: initiumlab/mediawiki-elasticsearch:1.7.5-1
     networks:
       mediawiki-internal:
         ipv4_address: 172.27.1.10
@@ -22,7 +22,7 @@ services:
     build:
       context: .
       dockerfile: docker/parsoid/Dockerfile
-    image: cllu/mediawiki-parsoid:1.27-1
+    image: initiumlab/mediawiki-parsoid:1.27-1
     networks:
       mediawiki-internal:
         ipv4_address: 172.27.1.3
@@ -34,7 +34,7 @@ services:
     build:
       context: .
       dockerfile: docker/ocg/Dockerfile
-    image: cllu/mediawiki-ocg:1.27-2
+    image: initiumlab/mediawiki-ocg:1.27-2
     networks:
       ocg-internal:
       mediawiki-internal:
@@ -43,7 +43,7 @@ services:
     build:
       context: .
       dockerfile: docker/mediawiki/Dockerfile
-    image: cllu/mediawiki:1.27-7
+    image: initiumlab/mediawiki:1.27-7
     ports:
       - 80:80
     environment:
